Bug 499317 - LSP client and Debugger settings editors don't respect font size
Summary: LSP client and Debugger settings editors don't respect font size
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 24.12.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-30 11:17 UTC by Daenney
Modified: 2025-02-12 11:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daenney 2025-01-30 11:17:38 UTC
SUMMARY

I have configured Kate with a different font type and font size. When viewing the Colour Themes, both settings are respected. When viewing or editing LSP settings or Debug/DAP settings, only the font type, but not the size, is respected.

STEPS TO REPRODUCE

1. Set editor font to a bigger than the default font size, say 16p
2. View the Colour Theme > Default Theme
3. Now look at LSP Client > Default Server Settings or Debugger > Default Adapter Settings

OBSERVED RESULT

The Theme editor picks up both the font and size. LSP and DAP only pick up the font type.

EXPECTED RESULT

In "editor" views, both the font type and font size as configured are used. This also affects LSP Client > User Server Settings and Debugger > User Debug Adaptor Settings.

SOFTWARE/OS VERSIONS

Operating System: Arch Linux
KDE Plasma Version: 6.2.5
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.1
Comment 1 Waqar Ahmed 2025-01-31 09:08:16 UTC
Font type is not being respected as well. We just use the fixed width font from system.
Comment 2 Waqar Ahmed 2025-01-31 09:13:38 UTC
Git commit 4078089e1aa0749602b02b7c365528e13fab746d by Waqar Ahmed.
Committed on 31/01/2025 at 09:13.
Pushed by waqar into branch 'master'.

Use editor font in lsp,dap config page

M  +1    -1    addons/gdbplugin/debugconfigpage.cpp
M  +1    -1    addons/lspclient/lspclientconfigpage.cpp

https://invent.kde.org/utilities/kate/-/commit/4078089e1aa0749602b02b7c365528e13fab746d
Comment 3 Waqar Ahmed 2025-02-12 11:57:47 UTC
Git commit 295b35c91d9096f1f045dbc9f6bb334ea215b3d2 by Waqar Ahmed.
Committed on 12/02/2025 at 11:56.
Pushed by waqar into branch 'release/24.12'.

Use editor font in lsp,dap config page
(cherry picked from commit 4078089e1aa0749602b02b7c365528e13fab746d)

M  +1    -1    addons/gdbplugin/debugconfigpage.cpp
M  +1    -1    addons/lspclient/lspclientconfigpage.cpp

https://invent.kde.org/utilities/kate/-/commit/295b35c91d9096f1f045dbc9f6bb334ea215b3d2