Use editor font in lsp,dap config page

BUG: 499317